# rock-paper-scissors

./: .gitignore  README.md  pyproject.toml  results.ipynb
grps/: __init__.py  agent.py  evolution_policies.py  grid.py  rps_agent.py  rps_model.py  specie.py
tests/: 1g_2s.py  1s_2i.py  3g.py  3s.py  money.py  rps.py  test1.py
